// HakjDB gRPC API
// API version: 1.2.0
//
// This package contains Protobuf definitions related to authentication.

syntax = "proto3";
package api.v1.authpb;

message AuthenticateRequest {
  string password = 1;
}

message AuthenticateResponse {
  string auth_token = 1;
}

// AuthService provides RPCs related to authentication.
service AuthService {
  // Authenticate authenticates a client.
  rpc Authenticate(AuthenticateRequest) returns (AuthenticateResponse) {}
}